data/derived/fa15/progs/unify/prog0999.ml.out
Characters 707-711:
  | MultDivBy6 (e1,e2)    -> "(("(exprToString e1)^" * "^(exprToString e2)^") /6)";;
                             ^^^^
Error: This expression has type string
       This is not a function; it cannot be applied.
